--- a/package.json
+++ b/package.json
@@ -18,5 +18,11 @@
   "homepage": "https://github.com/Malak-o/ToDoApp#readme",
   "devDependencies": {
     "parcel": "^2.4.1"
+  },
+  "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@material-ui/core": "^4.12.4",
+    "@mui/material": "^5.6.0"
   }
 }
