--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@material-ui/core": "^4.12.4",
-    "@mui/material": "^5.6.0"
+    "@mui/material": "^5.6.0",
+    "bootstrap": "^5.1.3"
   }
 }
